<?xml version="1.0" encoding="utf-8"?>
<!DOCTYPE
    resources
    [<!ENTITY appname "Xuber Service Provider">
    <!ENTITY provider "Provider">
    <!ENTITY providers "Providers">
    <!ENTITY service "Service">
    <!ENTITY services "Services">
    <!ENTITY servicecap "SERVICES">
    <!ENTITY user "User">]>

<resources>

    <!--Application Name-->
    <string name="app_name">&appname;</string>

    <!--Google map-->
    <string name="google_map_api">AIzaSyCiHMKnzPt86tPDGr7HBBonth3KQgSMOqw</string>

    <!--Flow status -->
    <string name="tap_when_arrived">Tap when arrived</string>
    <string name="tap_when_pickedup">Start &service;</string>
    <string name="tap_when_dropped">End &service;</string>
    <string name="tap_when_paid">Confirm payment</string>
    <string name="cancel_ride">Cancel request</string>
    <string name="rate_user">Submit</string>

    <!--Invoice-->
    <string name="invoice">Invoice</string>
    <string name="base_fare">Base fare</string>
    <string name="tax_fare">Tax fare</string>
    <string name="hourly_fare">Hourly fare</string>
    <string name="wallet_detection">Wallet Detection</string>
    <string name="promotion_applied">Commission</string>
    <string name="total">Total</string>
    <string name="amount_to_be_paid">Amount to be paid</string>
    <string name="sample_base_price">$0</string>
    <string name="time_consumed">Time\nconsumed</string>
    <string name="service_photo">&service; Photo</string>
    <string name="selected_payment_mode">Cash</string>
    <string name="pay_now">Confirm Payment</string>
    <string name="payment_methods">Payment Methods</string>
    <string name="write_your_comment">Write your comments</string>
    <string name="no_comments">No Comments Available</string>
    <string name="rate_provider">Rate your &service; with</string>
    <string name="start_service">Upload and Start &service;</string>
    <string name="end_service">Upload and End &service;</string>
    <string name="services_requested">&services; Requested</string>
    <string name="profile">Profile</string>

    <!--Offline Online -->
    <string name="go_online">GO ONLINE</string>
    <string name="go_offline">GO OFFLINE</string>

    <!-- Error Messages-->
    <string name="something_went_wrong">Something went wrong.</string>
    <string name="services_updated">&services; updated successfully!</string>
    <string name="something_went_wrong_net">Something went wrong, please check internet connection.</string>
    <string name="oops_connect_your_internet">Oops! Connect your Internet.</string>
    <string name="server_down">Unable to reach the server.</string>
    <string name="please_try_again">Please try again.</string>
    <string name="email_validation">Enter your email ID.</string>
    <string name="not_valid_email">Not a valid email ID.</string>
    <string name="password_validation">Password can not be left empty.</string>
    <string name="first_name_empty">First name required.</string>
    <string name="last_name_empty">Last name required.</string>
    <string name="mobile_number_empty">Mobile number required.</string>
    <string name="save_picture">Save</string>

    <!--Show Dailog-->
    <string name="connect_to_network">Please connect to network or quit</string>
    <string name="connect_to_wifi">Please connect to WIFI</string>
    <string name="quit">Quit</string>
    <string name="cencel_request">Are you sure you want to cancel the &service; request?</string>

    <!--settings-->
    <string name="price">price</string>
    <string name="required">This field is required</string>
    <string name="price_title">Price</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_history">&service; History</string>
    <string name="menu_payment">Settings</string>
    <string name="menu_share">Share</string>


    <!--Nav Menu-->
    <string name="drawer_open">navigation_drawer_open</string>
    <string name="drawer_close">navigation_drawer_close</string>
    <string name="menu_coupon">Coupon</string>
    <string name="menu_wallet">Wallet</string>
    <string name="waitingForApproval">Waiting for your account to be verified by our authority.</string>

    <!-- Coupon Fragment-->
    <string name="enter_the_coupon">Enter the coupon code</string>
    <string name="add_coupon">ADD COUPON</string>
    <string name="choose_payment">Choose payment method</string>

    <!--Common-->
    <string name="request_xuber">Request &service;</string>
    <string name="enter_service_loc">Enter &service; location</string>
    <string name="looking_for_providers">Looking for your &provider;</string>
    <string name="call">Call</string>
    <string name="cancel_request">Cancel Request</string>
    <string name="change">Change</string>
    <string name="True">true</string>
    <string name="False">false</string>
    <string name="field_required">This field is required</string>
    <string name="passwd_length">Password must be minimum 6 characters</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="logout">Logout</string>
    <string name="exit_confirm">Are you sure want to logout?</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="carpendar">Carpendar</string>
    <string name="enter_service_location">Please enter your &service; location</string>
    <string name="empty_home_category">No &service; expert found</string>
    <string name="submit">Submit</string>
    <string name="pick_up_location">Where to?</string>
    <string name="no_service">No &services; found.</string>

    <!--service flow-->
    <string name="provider_accepted">&provider; has accepted your request</string>
    <string name="provider_arrived">&provider; has arrived to your location</string>
    <string name="provider_service">Enjoy your &service;</string>
    <string name="sample_mail_id">name@example.com</string>
    <string name="sample_number">9876543210</string>
    <string name="password_txt">******</string>

    <!--Activity Email/Begin -->
    <string name="whats_your_mail_address">What\'s your email address?</string>
    <string name="get_moving_with_xuber_services">Get moving with Xuber &services;</string>
    <string name="enter_your_mail_id">Enter your mail ID</string>

    <!--Activity Password -->
    <string name="welcome_back">Welcome back, sign in to continue </string>
    <string name="enter_your_password">Enter your password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="forgot_password_menu">Forgot password</string>
    <string name="i_need_to_create_an_account">I need to create an account</string>

    <!-- Activity ForgetPassword -->
    <string name="recover_password">Enter your mail ID for recovery</string>

    <!--Activity Register-->
    <string name="phone_number">Phone number</string>
    <string name="password">Password</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="mobile_no">9876543210</string>

    <!--Change Password-->
    <string name="change_password_title">Change Password</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm New Password</string>
    <string name="please_enter_current_pass">Please enter current password.</string>
    <string name="please_enter_new_pass">Please enter new password.</string>
    <string name="please_enter_confirm_pass">Please enter confirmation password.</string>
    <string name="different_passwords">Password doesn\'t match.</string>
    <string name="commission">Commission</string>

    <!--Your Trips-->
    <string name="history">History</string>
    <string name="comments">Comments</string>
    <string name="no_trips">You have no past &service; requests</string>
    <string name="your_trips">Your &service; Requests</string>
    <string name="upcoming">Upcoming</string>
    <string name="no_upcoming">You have no upcoming &service; requests</string>
    <string name="past">Past</string>

    <!--Provider Accepted-->
    <string name="sample_name">Will Smith</string>
    <string name="sample_service">BMW</string>
    <string name="call_btn">Call</string>
    <string name="cancel_trip">Cancel Request</string>
    <string name="surge_pricing">Due to peak hours, charges will vary based on availability of &providers;.</string>

    <!-- Edit Activity-->
    <string name="edit_profile">Edit Account</string>
    <string name="change_password">Looking to change password?</string>
    <string name="save">Save</string>
    <string name="save_before">Upload and Start &service;</string>
    <string name="save_after">Upload and End &service;</string>
    <string name="update_success">Profile Updated.</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="already_account">Already have an account? Click here to </string>
    <string name="no_account">Don\'t have an account? </string>
    <string name="here">here</string>
    <string name="choose_service">Choose your &service;</string>
    <string name="edit">Edit</string>
    <string name="about">About</string>
    <string name="write_something">write something</string>
    <string name="no_rides">No services</string>
    <string name="target_completed">Target\ncompleted</string>
    <string name="earnings">Earnings</string>
    <string name="summary">Summary</string>
    <string name="total_rides">Total No.of &services;</string>
    <string name="revenue">Revenue</string>
    <string name="schedule_rides">Schedule &services;</string>
    <string name="canceled_rides">Cancelled &services;</string>
    <string name="help">Help</string>
    <string name="help_title">Xuber &services; &provider; help</string>
    <string name="help_msg">Our team will contact\n you soon!</string>
    <string name="time">Time</string>
    <string name="distance">Distance</string>
    <string name="amount">Amount</string>
    <string name="service">&service;</string>
    <string name="cancel">Cancel</string>
    <string name="total_amount">Total amount</string>
    <string name="confirm">Confirm</string>
    <string name="click_resend">Click here to resend password</string>
    <string name="cancel_confirm">Are you sure you want to cancel the &service;?</string>
    <string name="call_confirm">Are you sure you want to make a call?</string>
    <string name="service_status">&service; status</string>
    <string name="service_type">&service; type</string>
    <string name="schedule_date">Schedule date</string>
    <string name="service_location">&service; Location</string>
    <string name="service_address">&servicecap; ADDRESS</string>
    <string name="reject">Reject</string>
    <string name="before_service">Before &service;</string>
    <string name="after_service">After &service;</string>
    <string name="picture">Picture</string>
    <string name="no_mobile">No mobile number available</string>
    <string name="digits">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="first_name_no_number">First name not accept numbers</string>
    <string name="last_name_no_number">Last name do not accept numbers</string>
    <string name="rate_provider_lbl">Rate your &service; with</string>
    <string name="mobile_no_validation">Mobile number must have 10 to 20 digits</string>
    <string name="exit_app_confirm">Are you sure want to exit?</string>
    <string name="exit">Exit</string>
    <string name="hello_team">Hello team</string>
    <string name="email_help">This is my email id : </string>
    <string name="session_timeout">Please login to continue</string>
    <string name="accept">Accept</string>

</resources>
