<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/nav_header"
    android:orientation="vertical"
    tools:context=".Activity.ActivityPassword">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/nav_header"
        android:orientation="vertical">


        <ImageView
            android:layout_width="@dimen/_125sdp"
            android:layout_height="@dimen/_125sdp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_20sdp"
            android:src="@drawable/logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:orientation="vertical">

            <com.xuber_for_services.provider.Utils.ClanProTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Mobile No."
                android:textColor="@color/user_name"
                android:textSize="@dimen/_11sdp" />

            <com.xuber_for_services.provider.Utils.ClanProEditText
                android:id="@+id/txtemail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:maxLines="1"
                android:textColor="@color/btn_color"
                android:textSize="@dimen/_12sdp" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="vertical">

            <com.xuber_for_services.provider.Utils.ClanProTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textColor="@color/user_name"
                android:textSize="@dimen/_11sdp" />


            <com.xuber_for_services.provider.Utils.ClanProEditText
                android:id="@+id/txtpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@color/btn_color" />


        </LinearLayout>


        <com.xuber_for_services.provider.Utils.ClanProButton
            android:id="@+id/btnSignIn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_30sdp"
            android:layout_marginRight="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_weight="1"
            android:background="@drawable/rounded_button"
            android:text="@string/common_signin_button_text"
            android:textSize="@dimen/_14sdp" />


        <com.xuber_for_services.provider.Utils.ClanProTextView
            android:id="@+id/lblforgotpassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_15sdp"
            android:gravity="center"
            android:text="@string/forgot_password"
            android:textColor="@color/user_name"
            android:textSize="@dimen/_11sdp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottom"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_70sdp"
        android:layout_alignParentBottom="true"
        android:background="@android:color/black"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/lnrRegister"
            android:layout_width="wrap_content"
            android:layout_height="?actionBarSize"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <com.xuber_for_services.provider.Utils.ClanProTextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/no_account"
                android:layout_marginRight="@dimen/_5sdp"
                android:textColor="@color/user_name"
                android:textSize="@dimen/_12sdp" />

            <com.xuber_for_services.provider.Utils.ClanProTextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_marginRight="@dimen/_5sdp"
                android:text="@string/sign_up"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp" />

            <com.xuber_for_services.provider.Utils.ClanProTextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/here"
                android:textColor="@color/user_name"
                android:textSize="@dimen/_12sdp" />

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
