<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_edit_profile"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/btn_color"
        android:elevation="@dimen/_10sdp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgBack"
            android:layout_width="30dp"
            android:layout_height="25dp"
            android:layout_gravity="center_vertical"
            android:layout_margin="10dp"
            android:padding="5dp"
            android:src="@drawable/back_icon"
            android:tint="@color/white" />

        <com.xuber_for_services.provider.Utils.ClanProTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="Forgot Password"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <com.xuber_for_services.provider.Utils.ClanProTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_password"
            android:textColor="@color/user_name"
            android:textSize="@dimen/_12sdp" />


        <com.xuber_for_services.provider.Utils.ClanProEditText
            android:id="@+id/new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:imeOptions="actionNext"
            android:inputType="textWebPassword"
            android:maxLines="1"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_12sdp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <com.xuber_for_services.provider.Utils.ClanProTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm_password"
            android:textColor="@color/user_name"
            android:textSize="@dimen/_12sdp" />


        <com.xuber_for_services.provider.Utils.ClanProEditText
            android:id="@+id/confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:imeOptions="actionNext"
            android:inputType="textWebPassword"
            android:maxLines="1"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_12sdp" />

    </LinearLayout>

    <com.xuber_for_services.provider.Utils.ClanProButton
        android:id="@+id/changePasswordBtn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_margin="@dimen/_20sdp"
        android:background="@color/btn_color"
        android:text="@string/change_password_title"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_12sdp" />


</LinearLayout>
